# ProjectTmplt

./: README.md
cmake/sample/: CMakeLists.txt
cmake/sample_lib/: CMakeLists.txt  build.sh
cmake/sample_lib/test/: CMakeLists.txt
cmake/simple/: CMakeLists.txt
cmake/simple/src/: main.cc
conan/sample/: CMakeLists.txt  conanfile.py
conan/sample/src/: CMakeLists.txt
conan/sample_lib/: CMakeLists.txt  build.sh  conanfile.py
conan/sample_lib/cmake/: utils.cmake
conan/sample_lib/example/: CMakeLists.txt  build.sh  conanfile.py  main.cc
conan/sample_lib/src/: CMakeLists.txt
conan/sample_lib/src/sample_lib/: define.h  sample.cc  sample.h
conan/simple/: CMakeLists.txt  build.sh  conanfile.txt
conan/simple/src/: CMakeLists.txt
